[package]
name = "reddit_wallpapers"
version = "0.1.0"
authors = ["Daniel Schmitz <schmytzi@gmail.com>"]

[dependencies]
reqwest = "0.8.5"
serde_json = "1.0"
regex = "1.0.0"
argparse = "0.2.1"
user32-sys = "0.1.2"
imagefmt = "4.0.0"

[[bin]]
name = "reddit-wallpapers"
path = "src/main.rs"

[lib]
name = "reddit_wallpapers"
path = "src/libs.rs"
